--- a/Login Page/Login.html
+++ b/Login Page/Login.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col">
                     <h5> <i class="fa fa-user" aria-hidden="true"></i> Logo</h5>
-                    <form action="#" method="post">
+                    <form action="https://gaurang-bit786.github.io/Shoe-Store-Website/" method="post">
                         <div class="form-group">
                             <label class="lable">
                             <i class="fa fa-user-circle" aria-hidden="true"> Email</i>
